# authorkit

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml  release-api-binaries.yml
api/: .gitignore  README.md  author-kit-api.spec  pyproject.toml
api/author_kit/: __init__.py  __main__.py  cli.py  config.py  deps.py  main.py  schemas.py
api/author_kit/core/: __init__.py  compendium_store.py  embeddings.py  llm_aggregator.py  paths.py  project_store.py  rag_index.py  scene_store.py  settings_store.py  workshop_store.py
api/author_kit/routers/: app_settings.py  chat.py  compendium.py  conversation.py  health.py  projects.py  prompts.py  rag.py  workshop.py
api/author_kit/services/: __init__.py  llm_service.py  prompt_assembly.py  workshop_message.py
api/scripts/: build-standalone.sh
api/tests/: conftest.py  test_app_settings.py  test_chat.py  test_compendium_files.py  test_health.py  test_prompts.py  test_summarize.py  test_workshop.py  test_workshop_threads.py  test_workspace.py
plugin/: .gitignore  LICENSE  README.md  eslint.config.mjs  package-lock.json  package.json  package.nls.fr.json  package.nls.json  tsconfig.json  vitest.config.mts
plugin/l10n/: bundle.l10n.fr.json
plugin/src/: chatWorkflow.ts  compendiumPaths.test.ts  compendiumPaths.ts  config.ts  configLogic.test.ts  configLogic.ts  extension.ts  pathUtils.test.ts  pathUtils.ts  scenes.ts  selectionContext.ts  selectionLogic.test.ts  selectionLogic.ts  selectionRangeLabel.ts  uuidUtil.test.ts  uuidUtil.ts  workshopBootstrap.ts  workshopInsert.ts  workshopSelectionCodeLens.ts  (+1 more)
(+22 files in other folders)
