[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "author-kit-api"
version = "0.1.0"
description = "AuthorKit HTTP API — creative writing assistant backend"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Julien Moulin", email = "julien@supralab.fr" }]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    # Pin the LangChain stack to one major line so pip does not backtrack across
    # incompatible google-genai / grpc stacks. aiohttp is explicit because
    # langchain-together 0.4+ needs >=3.13.3; an older site-packages aiohttp
    # otherwise triggers resolution-too-deep with loose lower bounds.
    "langchain-core>=1.2.27,<2",
    "langchain-openai>=1.1.12,<2",
    "langchain-anthropic>=1.4.0,<2",
    "langchain-google-genai>=4.2.1,<5",
    "langchain-ollama>=1.1.0,<2",
    "langchain-together>=0.4.0,<0.5",
    "aiohttp>=3.13.3",
    "requests>=2.31.0",
    "tiktoken>=0.7.0",
    "numpy>=1.24.0",
    "faiss-cpu>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["author_kit"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
